--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
-alembic==0.8.2
 Flask==0.10.1
 Flask-Login==0.3.2
 Flask-Migrate==1.6.0
-Flask-Script==2.0.5
+Flask-OAuth==0.12
 Flask-SQLAlchemy==2.0
-itsdangerous==0.24
+Flask-Script==2.0.5
 Jinja2==2.8
 Mako==1.0.2
 MarkupSafe==0.23
 MySQL-python==1.2.5
-python-editor==0.4
+SQLAlchemy==1.0.8
 Werkzeug==0.10.4
+alembic==0.8.2
+argparse==1.2.1
+httplib2==0.9.2
+itsdangerous==0.24
+oauth==1.0.1
+oauth2==1.9.0.post1
+python-editor==0.4
+wsgiref==0.1.2
