--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Django==1.8.5
 Flask==0.10.1
 Flask-Login==0.3.2
 Flask-Migrate==1.6.0
@@ -12,9 +13,17 @@ SQLAlchemy==1.0.8
 Werkzeug==0.10.4
 alembic==0.8.2
 argparse==1.2.1
+extras==0.0.3
 httplib2==0.9.2
 itsdangerous==0.24
+linecache2==1.0.0
 oauth==1.0.1
 oauth2==1.9.0.post1
+pbr==1.8.1
 python-editor==0.4
+python-mimeparse==0.1.4
+six==1.10.0
+testtools==1.8.0
+traceback2==1.4.0
+unittest2==1.1.0
 wsgiref==0.1.2
