--- a/config.cfg
+++ b/config.cfg
@@ -1,3 +1,3 @@
 DEBUG=True
-SQLALCHEMY_DATABASE_URI='mysql://sunrindcon:sunrindcon123@127.0.0.1:3306/sunrindcon?charset=utf8'
+SQLALCHEMY_DATABASE_URI='mysql://sunrindcon:sunrindcon123@linux.kim82536.pe.kr:3306/sunrindcon?charset=utf8'
 SECRET_KEY='development-key'
