--- a/config.cfg
+++ b/config.cfg
@@ -1,3 +1,3 @@
 DEBUG=True
-SQLALCHEMY_DATABASE_URI='mysql://sunrindcon:sunrindcon123@localhost:3306/sunrindcon?charset=utf8'
+SQLALCHEMY_DATABASE_URI='mysql://attract:attract123@localhost:3306/attract?charset=utf8'
 SECRET_KEY='development-key'
